# portfolio

./: LICENSE  README.md  load-prod-data.sh  nuxt.run.xml  pre-commit  start-dev-db.sh
.github/workflows/: app.yml  cms.yml
app/: app.vue  nuxt.config.ts  package-lock.json  package.json
bg-app/: Dockerfile  README.md  app.vue  codegen.ts  nuxt.config.ts  package-lock.json  package.json  utils.ts
bg-app/__generated__/: gql.ts  graphql.ts
bg-app/bindings/: abandon_game_reducer.ts  bot_move_reducer.ts  bot_move_scheduler_table.ts  bot_move_scheduler_type.ts  chains_type.ts  connect_4_type.ts  coord_type.ts  create_game_instance_reducer.ts  db_board_game_move_type.ts  db_board_game_param_type.ts  db_board_game_type.ts  db_vector_2_type.ts  force_start_game_reducer.ts  go_board_history_table.ts  go_board_history_type.ts  group_type.ts  identity_disconnected_reducer.ts  index.ts  join_random_game_reducer.ts  komi_type.ts  link_head_type.ts  link_node_type.ts  make_board_game_move_reducer.ts  make_random_board_game_move_reducer.ts  move_position_reducer.ts  move_to_room_reducer.ts  move_type.ts  option_u_16_type.ts  outcome_type.ts  player_type.ts  room_table.ts  room_type.ts  rules_type.ts  say_hello_reducer.ts  score_type.ts  spacetime_go_board_type.ts  state_type.ts  tile_content_type.ts  (+14 more)
bg-cms/: .dockerignore  .gitignore  Dockerfile  auth.ts  keystone.ts  package-lock.json  package.json  schema.graphql  schema.prisma  schema.ts
bg-game-server/: Cargo.toml  logs.sh  publish-prod.sh  publish.sh  start_dev_server.sh
bg-game-server/src/: board_games.rs  lib.rs
(+35 files in other folders)
