[package]
name = "boardgame-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.1.0"
log = "0.4"
board-game = { version = "0.8.7", git = "https://github.com/BastianGanze/board-game-rs-spacetime-db.git" }
serde_json = "1.0.140"